# qt_vulkan_example

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/app/: main.cpp  vulkanwidget.cpp  vulkanwidget.h
src/renderer/: trianglerenderer.cpp  trianglerenderer.h
src/renderer/shader/: compile.sh
